# nlp-ie-label-legends

./: .gitignore  README.md  pyproject.toml
notebooks/: create_conllu.ipynb  db_investigate.ipynb  debert.ipynb  debert_01_16.ipynb  debert_majority_01_16.ipynb  deberta_analysis.ipynb  distilbert.ipynb  ensemble.ipynb  ensemble_scores.ipynb  error_analysis.ipynb  load.ipynb  majority_vote.ipynb  mostFrequent.ipynb  regex.ipynb  xgBoost.ipynb
resource/: ensemble_predictions.csv  ensemble_predictions_own.csv  ensemble_scores.csv  ensemble_scores_own.csv  high_error_texts.csv  own_test_set.csv
resource/analysis/: deberta_base_predictions.csv
resource/conll/: 0.conll  1.conll  10.conll  100.conll  1000.conll  10000.conll  10001.conll  10002.conll  10003.conll  10004.conll  10005.conll  10006.conll  10007.conll  10008.conll  10009.conll  1001.conll  10010.conll  10011.conll  10012.conll  10013.conll  10014.conll  10015.conll  10016.conll  10017.conll  10018.conll  10019.conll  1002.conll  10020.conll  10021.conll  10022.conll  10023.conll  10024.conll  10025.conll  10026.conll  10027.conll  10028.conll  10029.conll  1003.conll  10030.conll  10031.conll  (+59960 more)
resource/mlflow/DeBERTa/: predictions.json
resource/mlflow/Regex/: predictions.json
resource/mlflow/distilbert/: predictions.json
resource/mlflow/mostfrequent/: predictions.json
resource/mlflow/xgboost/: predictions.json
src/label_legends/: __init__.py  deberta.py  deberta_majority.py  female.py  plot.py  preprocess.py  result.py  swears_negative.py  util.py
