[project]
name = "label-legends"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Lukas Mahler", email = "lukas.mah@outlook.at" }
]
dependencies = [
    "polars>=1.9.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipykernel>=6.29.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/label_legends"]
