[project]
name = "label-legends"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Lukas Mahler", email = "lukas.mah@outlook.at" }
]
dependencies = [
    "accelerate>=1.2.0",
    "conllu>=6.0.0",
    "matplotlib>=3.9.2",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "polars>=1.9.0",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "stanza>=1.9.2",
    "torch>=2.5.1",
    "transformers>=4.47.0",
    "wandb>=0.19.0",
    "xgboost>=2.1.3",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipykernel>=6.29.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/label_legends"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.3",
]
