[project]
name = "label-legends"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Lukas Mahler", email = "lukas.mah@outlook.at" }
]
dependencies = [
    "conllu>=6.0.0",
    "datasets>=3.2.0",
    "matplotlib>=3.9.2",
    "mlflow>=2.19.0",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "polars>=1.9.0",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.0",
    "smac>=2.2.0",
    "stanza>=1.9.2",
    "tiktoken>=0.8.0",
    "transformers>=4.47.0",
    "xgboost>=2.1.3",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipykernel>=6.29.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/label_legends"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.3",
    "swig>=4.3.0",
]
gpu = [
    "cupy-cuda12x>=13.3.0",
]
